<?xml version="1.0"?>
<package format="3">
  <name>oomwoo_health_monitor</name>
  <version>0.1.0</version>
  <description>Stack health monitor and MCU software watchdog prototype for OOMWOO.</description>
  <maintainer email="xbattlax@gmail.com">xbattlax</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
