<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oomwoo_recovery_safety</name>
  <version>0.1.0</version>
  <description>Bounded recovery ladder and safety pause node for OOMWOO.</description>

  <maintainer email="xbattlax@gmail.com">xbattlax</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
