<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oomwoo_gazebo</name>
  <version>0.1.0</version>
  <description>oomwoo open-source robot vacuum - URDF, Gazebo simulation &amp; bumper</description>

  <maintainer email="alvarosamudio@protonmail.com">alvarosamudio</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/makerspet/oomwoo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/sdf"/>
  </export>
</package>
